--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.3"
+    "mongoose": "^8.5.3",
+    "moralis": "^2.27.2",
+    "web3": "^4.12.1",
+    "web3-validator": "^2.0.6"
   }
 }
